--- a/page/css/register.scss
+++ b/page/css/register.scss
@@ -216,13 +216,21 @@
 
             .navAll {
                 width: 190px;
-                height: 34px;
-                font-size: 12px;
+                // height: auto;
+                overflow: hidden;
                 color: #fff;
-                background: #ff3d3b url(../images/01/08.png)no-repeat 152px 14px;
                 float: left;
-                text-align: center;
-                line-height: 34px;
+
+
+
+                .navA {
+                    width: 190px;
+                    height: 34px;
+                    text-align: center;
+                    background: #ff3d3b url(../images/01/08.png)no-repeat 152px 14px;
+                    font-size: 12px;
+                    line-height: 34px;
+                }
             }
 
             .inNav {
@@ -275,8 +283,13 @@
             background: url(../images/01/类目bg_1.png);
             display: none;
 
+
             .xt {
                 background: #fff;
+            }
+
+            .hide {
+                display: none;
             }
 
             .xq-block {
@@ -476,6 +489,8 @@
             width: 550px;
             margin-left: 0%;
             float: left;
+            position: relative;
+            z-index: -4;
 
             h3 {
                 width: 100%;
