--- a/page/css/particulars.css
+++ b/page/css/particulars.css
@@ -550,7 +550,7 @@
   position: relative;
 }
 
-#particulars .main .hyb-detail-box .hyb-dinfo-box .hyb-dinfo-box-center h1 {
+#particulars .main .hyb-detail-box .hyb-dinfo-box .hyb-dinfo-box-center dl h1 {
   font-size: 16px;
   color: #666666;
   font-weight: bold;
@@ -558,7 +558,207 @@
   border-bottom: 1px solid #fa8f94;
 }
 
-#particulars .footer {
+#particulars .main .hyb-detail-box .hyb-dinfo-box .hyb-dinfo-box-center dl .hyb-p-price {
+  display: block;
+  background: #fff3f3;
+  padding: 10px 9px 8px 12px;
+}
+
+#particulars .main .hyb-detail-box .hyb-dinfo-box .hyb-dinfo-box-center dl .hyb-p-price ul li {
+  color: #4c4c4c;
+  letter-spacing: 1px;
+  font-size: 12px;
+}
+
+#particulars .main .hyb-detail-box .hyb-dinfo-box .hyb-dinfo-box-center dl .hyb-p-price ul li .hyb-price-money {
+  color: #f86f76;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+#particulars .main .hyb-detail-box .hyb-dinfo-box .hyb-dinfo-box-center dl .hyb-p-price ul li .hyb-price-ago {
+  text-decoration: line-through;
+  font-size: 14px;
+}
+
+#particulars .main .hyb-detail-box .hyb-dinfo-box .hyb-dinfo-box-center dl .hyb-p-price .hyb-p-li1 {
+  display: inline-block;
+  width: 33%;
+}
+
+#particulars .main .hyb-detail-box .hyb-dinfo-box .hyb-dinfo-box-center dl .hyb-p-price .hyb-p-li2 {
+  display: inline-block;
+  width: 35%;
+}
+
+#particulars .main .hyb-detail-box .hyb-dinfo-box .hyb-dinfo-box-center dl .hyb-p-price .hyb-p-li3 {
+  display: inline-block;
+  width: 27%;
+}
+
+#particulars .main .hyb-detail-box .hyb-dinfo-box .hyb-dinfo-box-center dl .hyb-pcom-dd {
+  display: inline-block;
+  width: 100%;
+  font-size: 12px;
+  margin-top: 8px;
+}
+
+#particulars .main .hyb-detail-box .hyb-dinfo-box .hyb-dinfo-box-center dl .hyb-pcom-dd .hyb-p-dt {
+  display: inline;
+  float: left;
+  width: 68px;
+  color: #666;
+}
+
+#particulars .main .hyb-detail-box .hyb-dinfo-box .hyb-dinfo-box-center dl .hyb-pcom-dd .hyb-p-dd {
+  width: 485px;
+  float: left;
+  display: inline;
+}
+
+#particulars .main .hyb-detail-box .hyb-dinfo-box .hyb-dinfo-box-center dl .hyb-pcom-dd .hyb-p-dd .btn-stock {
+  border: 1px solid #f86f76;
+  display: inline-block;
+  padding: 0px 10px;
+  margin-right: 5px;
+  border-radius: 5px;
+  position: relative;
+  cursor: pointer;
+}
+
+#particulars .main .hyb-detail-box .hyb-dinfo-box .hyb-dinfo-box-center dl .hyb-pcom-dd .hyb-p-dd .gf {
+  border: 1px solid #666666;
+}
+
+#particulars .main .hyb-detail-box .hyb-dinfo-box .hyb-dinfo-box-center dl .hyb-pcom-dd .hyb-p-dd .hyb-btn-reduce {
+  display: block;
+  float: left;
+  width: 27px;
+  height: 27px;
+  background-image: url(../images/02/tpr4.jpg);
+  background-repeat: no-repeat;
+}
+
+#particulars .main .hyb-detail-box .hyb-dinfo-box .hyb-dinfo-box-center dl .hyb-pcom-dd .hyb-p-dd .hyb-total-txt {
+  float: left;
+  width: 54px;
+  height: 25px;
+  text-align: center;
+  border: 1px solid #333333;
+}
+
+#particulars .main .hyb-detail-box .hyb-dinfo-box .hyb-dinfo-box-center dl .hyb-pcom-dd .hyb-p-dd .hyb-btn-add {
+  display: block;
+  float: left;
+  width: 27px;
+  height: 27px;
+  background-image: url(../images/02/tpr4.jpg);
+  background-repeat: no-repeat;
+  background-position: -82px 0px;
+}
+
+#particulars .main .hyb-detail-box .hyb-dinfo-box .hyb-dinfo-box-center dl .hyb-pcom-dd .hyb-p-dd .btn-append {
+  display: block;
+  float: left;
+  width: 210px;
+  height: 38px;
+  background: #f86f76;
+  color: #ffffff;
+  font-size: 14px;
+  text-align: center;
+  line-height: 38px;
+}
+
+#particulars .main .hyb-detail-box .hyb-dinfo-box .hyb-dinfo-box-center dl .hyb-pcom-dd .hyb-p-dd .btn-buy {
+  display: block;
+  float: left;
+  width: 208px;
+  height: 36px;
+  border: 1px solid #f86f76;
+  margin-left: 12px;
+  background: #fff3f3;
+  color: #f86f76;
+  font-size: 14px;
+  text-align: center;
+  line-height: 36px;
+}
+
+#particulars .main .hyb-detail-box .hyb-dinfo-box .hyb-dinfo-box-center dl .hyb-pcom-dd .hyb-p-btn {
+  margin-top: 20px;
+}
+
+#particulars .main .hyb-detail-box .hyb-dinfo-box .hyb-dinfo-box-center dl .hyb-warp-share {
+  width: 100%;
+  margin: 68px auto auto auto;
+  height: 20px;
+}
+
+#particulars .main .hyb-detail-box .hyb-dinfo-box .hyb-dinfo-box-center dl .hyb-warp-share .hyb-p-share {
+  width: auto;
+  float: right;
+  height: 20px;
+}
+
+#particulars .main .hyb-detail-box .hyb-dinfo-box .hyb-dinfo-box-center dl .hyb-warp-share .hyb-p-share a {
+  font-size: 12px;
+  display: inline-block;
+  float: left;
+  margin-left: 22px;
+  background-image: url(../images/02/tpr3.jpg);
+  background-repeat: no-repeat;
+  text-indent: 22px;
+  line-height: 20px;
+  color: #aaaaaa;
+}
+
+#particulars .main .hyb-detail-box .hyb-dinfo-box .hyb-dinfo-box-right {
+  width: 243px;
+  float: right;
+  border: 0px solid #e9e9e9;
+  padding-bottom: 105px;
+}
+
+#particulars .main .hyb-detail-box .hyb-dinfo-box .hyb-dinfo-box-right .rightT {
+  width: 245px;
+  height: 190px;
+  overflow: hidden;
+  margin-bottom: 10px;
+}
+
+#particulars .main .hyb-detail-box .hyb-dinfo-box .hyb-dinfo-box-right .rightT img {
+  width: 75px;
+  height: 75px;
+  border-radius: 50%;
+}
+
+#particulars .main .hyb-detail-box .hyb-dinfo-box .hyb-dinfo-box-right .rightT span {
+  display: inline-block;
+  height: 75px;
+  width: 100px;
+  line-height: 75px;
+  vertical-align: top;
+  color: #ff3b3b;
+  font-family: "微软雅黑";
+  padding-left: 20px;
+  font-size: 18px;
+}
+
+#particulars .main .hyb-detail-box .hyb-dinfo-box .hyb-dinfo-box-right .rightT p {
+  color: #666666;
+  font-size: 12px;
+  text-indent: 2em;
+  line-height: 16px;
+  font-family: "微软雅黑";
+  margin-top: 12px;
+  padding: 13px 15px 0px 17px;
+}
+
+#particulars .main .hyb-detail-box .hyb-dinfo-box .hyb-dinfo-box-right .rightB {
+  width: 245px;
+  float: left;
+}
+
+.footer {
   width: 100%;
   height: 540px;
   background: #efefef;
@@ -567,44 +767,44 @@
   overflow: hidden;
 }
 
-#particulars .footer .inFooter {
+.footer .inFooter {
   width: 1200px;
   margin: 0px auto;
   height: 214px;
   position: relative;
 }
 
-#particulars .footer .inFooter .inFooterInfo ul {
+.footer .inFooter .inFooterInfo ul {
   float: left;
   width: 152px;
 }
 
-#particulars .footer .inFooter .inFooterInfo ul li {
+.footer .inFooter .inFooterInfo ul li {
   text-align: center;
 }
 
-#particulars .footer .inFooter .inFooterInfo ul li a {
+.footer .inFooter .inFooterInfo ul li a {
   font-size: 12px;
   height: 22px;
   color: #3c3c3c;
 }
 
-#particulars .footer .inFooter .inFooterInfo ul li:hover a {
+.footer .inFooter .inFooterInfo ul li:hover a {
   color: #f02e4b;
 }
 
-#particulars .footer .inFooter .inFooterInfo ul .bt {
+.footer .inFooter .inFooterInfo ul .bt {
   margin-bottom: 18px;
   border-right: 1px #cccccc solid;
 }
 
-#particulars .footer .inFooter .inFooterInfo ul .bt h3 {
+.footer .inFooter .inFooterInfo ul .bt h3 {
   font-size: 14px;
   font-weight: bold;
   height: 18px;
 }
 
-#particulars .footer .inFooter .inFooterKefu {
+.footer .inFooter .inFooterKefu {
   width: 240px;
   height: 160px;
   position: absolute;
@@ -614,44 +814,44 @@
   border-left: 1px solid #ccc;
 }
 
-#particulars .footer .inFooter .inFooterKefu h3 {
+.footer .inFooter .inFooterKefu h3 {
   text-align: center;
   font-size: 14px;
   font-weight: bold;
   margin-bottom: 5px;
 }
 
-#particulars .footer .inFooter .inFooterKefu p {
+.footer .inFooter .inFooterKefu p {
   font-size: 12px;
   text-align: center;
 }
 
-#particulars .footer .inFooter .inFooterKefu .q1 {
+.footer .inFooter .inFooterKefu .q1 {
   margin-bottom: 10px;
 }
 
-#particulars .footer .inFooter .inFooterKefu .q3 {
+.footer .inFooter .inFooterKefu .q3 {
   text-align: center;
 }
 
-#particulars .footer .inFooter .inFooterKefu .q3 img {
+.footer .inFooter .inFooterKefu .q3 img {
   margin-bottom: 5px;
 }
 
-#particulars .footer .inFooter .inFootercode {
+.footer .inFooter .inFootercode {
   width: 196px;
   float: right;
   text-align: center;
 }
 
-#particulars .footer .inFooter .inFootercode h3 {
+.footer .inFooter .inFootercode h3 {
   text-align: center;
   font-size: 14px;
   font-weight: bold;
   margin: 5px 0px;
 }
 
-#particulars .footer .inFooter .inFootercode p {
+.footer .inFooter .inFootercode p {
   font-size: 12px;
   margin-left: 45px;
   width: 110px;
@@ -659,13 +859,13 @@
   line-height: 22px;
 }
 
-#particulars .footer .footService {
+.footer .footService {
   background: #cccccc;
   width: 100%;
   text-align: center;
 }
 
-#particulars .footer .copyRight_con p {
+.footer .copyRight_con p {
   font-size: 12px;
   color: #333;
   line-height: 30px;
@@ -673,21 +873,21 @@
   text-align: center;
 }
 
-#particulars .footer .copyRight_con p img {
+.footer .copyRight_con p img {
   margin-bottom: 3px;
 }
 
-#particulars .footer .copyRight_con .a8 ul {
+.footer .copyRight_con .a8 ul {
   width: 1066px;
   margin: auto;
   overflow: hidden;
 }
 
-#particulars .footer .copyRight_con .a8 ul li {
+.footer .copyRight_con .a8 ul li {
   float: left;
   margin: 0px 20px;
 }
 
-#particulars .footer .copyRight_con .a8 span {
+.footer .copyRight_con .a8 span {
   margin: 0px 10px;
 }
