--- a/page/css/particulars.scss
+++ b/page/css/particulars.scss
@@ -605,18 +605,240 @@
                     margin-left: 25px;
                     position: relative;
 
-                    h1 {
-                        font-size: 16px;
-                        color: #666666;
-                        font-weight: bold;
-                        padding-bottom: 9px;
-                        border-bottom: 1px solid #fa8f94;
-                    }
+                    dl {
 
+                        h1 {
+                            font-size: 16px;
+                            color: #666666;
+                            font-weight: bold;
+                            padding-bottom: 9px;
+                            border-bottom: 1px solid #fa8f94;
+                        }
+
+                        // -----------
+
+                        .hyb-p-price {
+                            display: block;
+                            background: #fff3f3;
+                            padding: 10px 9px 8px 12px;
+                        }
+
+
+
+
+                        // ========================================
+                        .hyb-p-price {
+
+                            ul {
+                                li {
+                                    color: #4c4c4c;
+                                    letter-spacing: 1px;
+
+                                    font-size: 12px;
+
+                                    .hyb-price-money {
+                                        color: #f86f76;
+                                        font-size: 20px;
+                                        font-weight: bold;
+                                    }
+
+                                    .hyb-price-ago {
+                                        text-decoration: line-through;
+                                        font-size: 14px;
+                                    }
+
+                                }
+                            }
+
+
+
+                            .hyb-p-li1 {
+                                display: inline-block;
+                                width: 33%
+                            }
+
+                            .hyb-p-li2 {
+                                display: inline-block;
+                                width: 35%;
+                            }
+
+                            .hyb-p-li3 {
+                                display: inline-block;
+                                width: 27%;
+                            }
+                        }
+
+                        //----------------
+                        // =================================================
+                        .hyb-pcom-dd {
+                            display: inline-block;
+                            width: 100%;
+                            font-size: 12px;
+                            margin-top: 8px;
+
+                            .hyb-p-dt {
+
+                                display: inline;
+                                float: left;
+                                width: 68px;
+                                color: #666
+                            }
+
+                            .hyb-p-dd {
+                                width: 485px;
+                                float: left;
+                                display: inline;
+
+                                .btn-stock {
+                                    border: 1px solid #f86f76;
+                                    display: inline-block;
+                                    padding: 0px 10px;
+                                    margin-right: 5px;
+                                    border-radius: 5px;
+                                    position: relative;
+                                    cursor: pointer;
+                                }
+
+                                .gf {
+                                    border: 1px solid #666666;
+                                }
+
+                                .hyb-btn-reduce {
+                                    display: block;
+                                    float: left;
+                                    width: 27px;
+                                    height: 27px;
+                                    background-image: url(../images/02/tpr4.jpg);
+                                    background-repeat: no-repeat;
+                                }
+
+                                .hyb-total-txt {
+                                    float: left;
+                                    width: 54px;
+                                    height: 25px;
+                                    text-align: center;
+                                    border: 1px solid rgb(51, 51, 51);
+                                }
+
+                                .hyb-btn-add {
+                                    display: block;
+                                    float: left;
+                                    width: 27px;
+                                    height: 27px;
+                                    background-image: url(../images/02/tpr4.jpg);
+                                    background-repeat: no-repeat;
+                                    background-position: -82px 0px;
+                                }
+
+                                .btn-append {
+                                    display: block;
+                                    float: left;
+                                    width: 210px;
+                                    height: 38px;
+                                    background: #f86f76;
+                                    color: #ffffff;
+                                    font-size: 14px;
+                                    text-align: center;
+                                    line-height: 38px;
+                                }
+
+                                .btn-buy {
+                                    display: block;
+                                    float: left;
+                                    width: 208px;
+                                    height: 36px;
+                                    border: 1px solid #f86f76;
+                                    margin-left: 12px;
+                                    background: #fff3f3;
+                                    color: #f86f76;
+                                    font-size: 14px;
+                                    text-align: center;
+                                    line-height: 36px;
+                                }
+                            }
+
+                            .hyb-p-btn {
+                                margin-top: 20px;
+                            }
+                        }
+
+                        // ---------------------------
+                        // =========================
+                        .hyb-warp-share {
+                            width: 100%;
+                            margin: 68px auto auto auto;
+                            height: 20px;
+
+                            .hyb-p-share {
+                                width: auto;
+                                float: right;
+                                height: 20px;
+
+                                a {
+                                    font-size: 12px;
+                                    display: inline-block;
+                                    float: left;
+                                    margin-left: 22px;
+                                    background-image: url(../images/02/tpr3.jpg);
+                                    background-repeat: no-repeat;
+                                    text-indent: 22px;
+                                    line-height: 20px;
+                                    color: #aaaaaa;
+                                }
+                            }
+                        }
+
+
+                    }
                 }
 
-            }
+                .hyb-dinfo-box-right {
+                    width: 243px;
+                    float: right;
+                    border: 0px solid #e9e9e9;
+                    padding-bottom: 105px;
 
+                    .rightT {
+                        width: 245px;
+                        height: 190px;
+                        overflow: hidden;
+                        margin-bottom: 10px;
+
+                        img {
+                            width: 75px;
+                            height: 75px;
+                            border-radius: 50%;
+                        }
+
+                        span {
+                            display: inline-block;
+                            height: 75px;
+                            width: 100px;
+                            line-height: 75px;
+                            vertical-align: top;
+                            color: #ff3b3b;
+                            font-family: "微软雅黑";
+                            padding-left: 20px;
+                            font-size: 18px;
+                        }
+
+                        p {
+                            color: #666666;
+                            font-size: 12px;
+                            text-indent: 2em;
+                            line-height: 16px;
+                            font-family: "微软雅黑";
+                            margin-top: 12px;
+                            padding: 13px 15px 0px 17px;
+                        }
+                    }
+
+                    .rightB {
+                        width: 245px;
+                        float: left;
+                    }
+                }
+            }
 
         }
 
@@ -624,150 +846,152 @@
     }
 
 
+}
 
-    // 底部部分
-    .footer {
-        width: 100%;
-        height: 540px;
-        background: #efefef;
-        border-top: #ff3333 solid 2px;
-        padding-top: 24px;
-        overflow: hidden;
 
-        .inFooter {
-            width: 1200px;
-            margin: 0px auto;
-            height: 214px;
-            position: relative;
 
-            .inFooterInfo {
+// 底部部分
+.footer {
+    width: 100%;
+    height: 540px;
+    background: #efefef;
+    border-top: #ff3333 solid 2px;
+    padding-top: 24px;
+    overflow: hidden;
 
-                ul {
-                    float: left;
-                    width: 152px;
+    .inFooter {
+        width: 1200px;
+        margin: 0px auto;
+        height: 214px;
+        position: relative;
 
-                    li {
-                        text-align: center;
+        .inFooterInfo {
 
-                        a {
-                            font-size: 12px;
-                            height: 22px;
-                            color: #3c3c3c;
-                        }
+            ul {
+                float: left;
+                width: 152px;
 
-                        &:hover a {
-                            color: #f02e4b;
+                li {
+                    text-align: center;
 
-                        }
+                    a {
+                        font-size: 12px;
+                        height: 22px;
+                        color: #3c3c3c;
                     }
 
-                    .bt {
-                        h3 {
-                            font-size: 14px;
-                            font-weight: bold;
-                            height: 18px;
-                        }
+                    &:hover a {
+                        color: #f02e4b;
 
-                        margin-bottom: 18px;
-                        border-right: 1px #cccccc solid;
                     }
+                }
+
+                .bt {
+                    h3 {
+                        font-size: 14px;
+                        font-weight: bold;
+                        height: 18px;
+                    }
+
+                    margin-bottom: 18px;
+                    border-right: 1px #cccccc solid;
                 }
             }
+        }
 
-            .inFooterKefu {
-                width: 240px;
-                height: 160px;
-                position: absolute;
-                right: 199px;
-                top: 0px;
-                border-right: 1px solid #ccc;
-                border-left: 1px solid #ccc;
+        .inFooterKefu {
+            width: 240px;
+            height: 160px;
+            position: absolute;
+            right: 199px;
+            top: 0px;
+            border-right: 1px solid #ccc;
+            border-left: 1px solid #ccc;
 
-                h3 {
-                    text-align: center;
-                    font-size: 14px;
-                    font-weight: bold;
-                    margin-bottom: 5px;
-                }
-
-                p {
-                    font-size: 12px;
-                    text-align: center;
-                }
-
-                .q1 {
-                    margin-bottom: 10px;
-                }
-
-                .q3 {
-                    text-align: center;
-
-                    img {
-                        margin-bottom: 5px;
-                    }
-                }
-            }
-
-            .inFootercode {
-                width: 196px;
-                float: right;
+            h3 {
                 text-align: center;
-
-
-                h3 {
-                    text-align: center;
-                    font-size: 14px;
-                    font-weight: bold;
-                    margin: 5px 0px;
-                }
-
-                p {
-                    font-size: 12px;
-                    margin-left: 45px;
-                    width: 110px;
-                    text-align: center;
-                    line-height: 22px;
-                }
+                font-size: 14px;
+                font-weight: bold;
+                margin-bottom: 5px;
             }
 
-
-        }
-
-        .footService {
-            background: #cccccc;
-            width: 100%;
-            text-align: center;
-        }
-
-        .copyRight_con {
             p {
                 font-size: 12px;
-                color: #333;
-                line-height: 30px;
-                padding: 10px 0;
+                text-align: center;
+            }
+
+            .q1 {
+                margin-bottom: 10px;
+            }
+
+            .q3 {
                 text-align: center;
 
                 img {
-                    margin-bottom: 3px;
+                    margin-bottom: 5px;
                 }
+            }
+        }
 
+        .inFootercode {
+            width: 196px;
+            float: right;
+            text-align: center;
+
+
+            h3 {
+                text-align: center;
+                font-size: 14px;
+                font-weight: bold;
+                margin: 5px 0px;
             }
 
-            .a8 {
-                ul {
-                    width: 1066px;
-                    margin: auto;
-                    overflow: hidden;
+            p {
+                font-size: 12px;
+                margin-left: 45px;
+                width: 110px;
+                text-align: center;
+                line-height: 22px;
+            }
+        }
 
-                    li {
-                        float: left;
-                        margin: 0px 20px;
-                    }
-                }
 
-                span {
-                    margin: 0px 10px;
+    }
+
+    .footService {
+        background: #cccccc;
+        width: 100%;
+        text-align: center;
+    }
+
+    .copyRight_con {
+        p {
+            font-size: 12px;
+            color: #333;
+            line-height: 30px;
+            padding: 10px 0;
+            text-align: center;
+
+            img {
+                margin-bottom: 3px;
+            }
+
+        }
+
+        .a8 {
+            ul {
+                width: 1066px;
+                margin: auto;
+                overflow: hidden;
+
+                li {
+                    float: left;
+                    margin: 0px 20px;
                 }
+            }
+
+            span {
+                margin: 0px 10px;
             }
         }
     }
