--- a/page/css/particulars.scss
+++ b/page/css/particulars.scss
@@ -617,7 +617,13 @@
                     }
 
 
+                    // .fn {
 
+                    //     img {
+                    //         width: 350px;
+                    //         height: 350px;
+                    //     }
+                    // }
                 }
 
                 .hyb-dinfo-box-center {
@@ -1016,6 +1022,3 @@
     }
 
 }
-
-
-
